==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- The target table name used in ``ALTER TABLE ... RENAME TO`` is now correctly
  validated.

- Fixed a regression that caused ``DELETE`` statements with a filter on
  ``PRIMARY KEY`` columns that don't match to fail instead of returning with a
  row count of 0.